# invoice-app

./: .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  metrics.py  models.py  retry.py  validators.py
app/prompts/: __init__.py  decision_prompts.py  extraction_prompts.py  ocr_prompts.py
app/services/: __init__.py
app/services/agents/: __init__.py  decision_agent.py  extraction_agent.py  ocr_agent.py
app/services/ocr/: __init__.py  providers.py  service.py
app/tasks/: __init__.py  celery.py  worker.py
tests/: test_api.py
